wip rewrite tile engine

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <canvas #canvas class="nes-cursor" (click)="clickCanvas($event)" (mousemove)="pointCanvas($event)">
 </canvas>
 <app-hud></app-hud>
-<app-command-menu [showmenu]="showmenu" (drop)="drop($event)" (buy)="buy($event)" (build)="build($event)"></app-command-menu>
+<app-command-menu [showmenu]="showmenu" (drop)="drop($event)" (burn)="burn($event)" (build)="build($event)"></app-command-menu>
