--- a/src/app/ui/hud/hud.component.html
+++ b/src/app/ui/hud/hud.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex align-items-center justify-content-between">
     <div></div>
-    <div class="text-primary"><i class="nes-icon coin is-small"></i> {{player.balance}} NCAT</div>
+    <div class="nes-container is-rounded is-dark text-primary"><i class="nes-icon coin is-small"></i> {{player.balance}} NCAT</div>
     <div></div>
 </div>
