--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,6 @@
 canvas {
   position: fixed;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100%;
+  image-rendering: pixelated;
 }
